--- a/index.html
+++ b/index.html
@@ -5,154 +5,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BCCD - Home</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        /* Basic navbar styling */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        .navbar {
-            background-color: #2a6a92;
-            overflow: hidden;
-        }
-
-        .navbar ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        .navbar > ul {
-            display: flex;
-        }
-
-        .navbar li {
-            position: relative;
-        }
-
-        .navbar > ul > li {
-            padding: 15px;
-            color: white;
-            cursor: pointer;
-        }
-
-        .navbar > ul > li:hover {
-            background-color: #1b4f70;
-        }
-
-        /* Submenu styling */
-        .navbar li ul {
-            display: none;
-            position: absolute;
-            top: 100%;
-            left: 0;
-            background-color: #1b4f70;
-            min-width: 200px;
-            z-index: 1;
-        }
-
-        .navbar li:hover ul {
-            display: block;
-        }
-
-        .navbar li ul li {
-            padding: 10px;
-            color: white;
-            cursor: pointer;
-        }
-
-        .navbar li ul li:hover {
-            background-color: #14506a;
-        }
-
-        .navbar li ul li ul {
-            top: 0;
-            left: 100%;
-        }
-    </style>
 </head>
 <body>
     <header>
         <nav class="navbar">
             <ul>
-                <li>Home</li>
-                <li>Grants
+                <li><a href="#">Home</a></li>
+                <li>
+                    <a href="#">Grants</a>
                     <ul>
-                        <li>State Grants</li>
-                        <li>Work Grants</li>
-                        <li>Local Funding and Support</li>
-                        <li>Funding Updates (from newsletter)</li>
-                        <li>Funding Accomplishments</li>
+                        <li><a href="#">State Grants</a></li>
+                        <li><a href="#">Work Grants</a></li>
+                        <li><a href="#">Local Funding and Support</a></li>
+                        <li><a href="#">Funding Updates (from newsletter)</a></li>
+                        <li><a href="#">Funding Accomplishments</a></li>
                     </ul>
                 </li>
-                <li>Get Involved
+                <li>
+                    <a href="#">Get Involved</a>
                     <ul>
-                        <li>Volunteer</li>
-                        <li>Donate</li>
-                        <li>Events
+                        <li><a href="#">Volunteer</a></li>
+                        <li><a href="#">Donate</a></li>
+                        <li>
+                            <a href="#">Events</a>
                             <ul>
-                                <li>Community Resilience Symposiums</li>
-                                <li>Annual Community Resilience Forum</li>
+                                <li><a href="#">Community Resilience Symposiums</a></li>
+                                <li><a href="#">Annual Community Resilience Forum</a></li>
                             </ul>
                         </li>
-                        <li>Education
+                        <li>
+                            <a href="#">Education</a>
                             <ul>
-                                <li>Workshops</li>
+                                <li><a href="#">Workshops</a></li>
                             </ul>
                         </li>
-                        <li>Environmental Notice Bulletin</li>
+                        <li><a href="#">Environmental Notice Bulletin</a></li>
                     </ul>
                 </li>
-                <li>Resources
+                <li>
+                    <a href="#">Resources</a>
                     <ul>
-                        <li>Water
+                        <li>
+                            <a href="#">Water</a>
                             <ul>
-                                <li>Disaster Mitigation</li>
-                                <li>Water Quality</li>
+                                <li><a href="#">Disaster Mitigation</a></li>
+                                <li><a href="#">Water Quality</a></li>
                             </ul>
                         </li>
-                        <li>Agriculture
+                        <li>
+                            <a href="#">Agriculture</a>
                             <ul>
-                                <li>Hickory Harvest</li>
-                                <li>Chestnut Giveaway</li>
-                                <li>Guides</li>
+                                <li><a href="#">Hickory Harvest</a></li>
+                                <li><a href="#">Chestnut Giveaway</a></li>
+                                <li><a href="#">Guides</a></li>
                             </ul>
                         </li>
-                        <li>Land</li>
-                        <li>Conservation
+                        <li><a href="#">Land</a></li>
+                        <li>
+                            <a href="#">Conservation</a>
                             <ul>
-                                <li>Wetlands</li>
-                                <li>Wildlife</li>
+                                <li><a href="#">Wetlands</a></li>
+                                <li><a href="#">Wildlife</a></li>
                             </ul>
                         </li>
-                        <li>Technology
+                        <li>
+                            <a href="#">Technology</a>
                             <ul>
-                                <li>Vermont Ripsower</li>
+                                <li><a href="#">Vermont Ripsower</a></li>
                             </ul>
                         </li>
                     </ul>
                 </li>
-                <li>News & Calendar
+                <li>
+                    <a href="#">News & Calendar</a>
                     <ul>
-                        <li>News</li>
-                        <li>Mailing List</li>
-                        <li>Events Calendar</li>
-                        <li>Environmental Notice Bulletin</li>
+                        <li><a href="#">News</a></li>
+                        <li><a href="#">Mailing List</a></li>
+                        <li><a href="#">Events Calendar</a></li>
+                        <li><a href="#">Environmental Notice Bulletin</a></li>
                     </ul>
                 </li>
-                <li>About Us
+                <li>
+                    <a href="#">About Us</a>
                     <ul>
-                        <li>Organization Members</li>
-                        <li>Board Meetings</li>
-                        <li>Partners</li>
+                        <li><a href="#">Organization Members</a></li>
+                        <li><a href="#">Board Meetings</a></li>
+                        <li><a href="#">Partners</a></li>
                     </ul>
                 </li>
-                <li>Contact Us</li>
-                <li>Emergency Response
+                <li><a href="#">Contact Us</a></li>
+                <li>
+                    <a href="#">Emergency Response</a>
                     <ul>
-                        <li>Flood Reporting</li>
+                        <li><a href="#">Flood Reporting</a></li>
                     </ul>
                 </li>
             </ul>
