--- a/index.html
+++ b/index.html
@@ -3,105 +3,197 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BCCD - Home</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Bennington County Conservation District</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            text-align: left;
+            background-color: #ffffff;
+            color: white;
+            padding: 30px 50px;
+        }
+
+        .logo img {
+            max-width: 150px;
+        }
+
+        nav {
+            background-color: #09522f;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            padding: 10px;
+        }
+
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        nav ul li {
+            position: relative;
+            margin: 0 20px;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: white;
+            font-size: 16px;
+            font-weight: bold;
+            padding: 10px 3px;
+            display: inline-block;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+
+        nav ul li a:hover {
+            background-color: white;
+            color: #09522f;
+            border-radius: 5px;
+        }
+
+        nav ul li .dropdown-menu {
+            display: none;
+            position: absolute;
+            top: 40px;
+            left: 0;
+            background-color: white;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 5px;
+            z-index: 1000;
+            min-width: 150px;
+        }
+
+        nav ul li .dropdown-menu a {
+            display: block;
+            padding: 10px 20px;
+            color: #09522f;
+            text-decoration: none;
+            font-size: 14px;
+            transition: background-color 0.3s ease;
+        }
+
+        nav ul li .dropdown-menu a:hover {
+            background-color: #f4f4f4;
+        }
+
+        nav ul li:hover .dropdown-menu {
+            display: block;
+        }
+
+        /* Styles for nested dropdowns */
+        nav ul li .dropdown-menu .nested-dropdown-menu {
+            display: none;
+            position: absolute;
+            top: 0;
+            left: 100%; /* Position it to the right of its parent */
+            background-color: white;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 5px;
+            z-index: 1000;
+            min-width: 150px;
+        }
+
+        nav ul li .dropdown-menu li:hover .nested-dropdown-menu {
+            display: block;
+        }
+
+        .hero {
+            text-align: center;
+            padding: 50px 20px;
+            background-color: #e8f5e9;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <nav class="navbar">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li>
-                    <a href="#">Grants</a>
-                    <ul>
-                        <li><a href="#">State Grants</a></li>
-                        <li><a href="#">Work Grants</a></li>
-                        <li><a href="#">Local Funding and Support</a></li>
-                        <li><a href="#">Funding Updates (from newsletter)</a></li>
-                        <li><a href="#">Funding Accomplishments</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">Get Involved</a>
-                    <ul>
-                        <li><a href="#">Volunteer</a></li>
-                        <li><a href="#">Donate</a></li>
-                        <li>
-                            <a href="#">Events</a>
-                            <ul>
-                                <li><a href="#">Community Resilience Symposiums</a></li>
-                                <li><a href="#">Annual Community Resilience Forum</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Education</a>
-                            <ul>
-                                <li><a href="#">Workshops</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Environmental Notice Bulletin</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">Resources</a>
-                    <ul>
-                        <li>
-                            <a href="#">Water</a>
-                            <ul>
-                                <li><a href="#">Disaster Mitigation</a></li>
-                                <li><a href="#">Water Quality</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Agriculture</a>
-                            <ul>
-                                <li><a href="#">Hickory Harvest</a></li>
-                                <li><a href="#">Chestnut Giveaway</a></li>
-                                <li><a href="#">Guides</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Land</a></li>
-                        <li>
-                            <a href="#">Conservation</a>
-                            <ul>
-                                <li><a href="#">Wetlands</a></li>
-                                <li><a href="#">Wildlife</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Technology</a>
-                            <ul>
-                                <li><a href="#">Vermont Ripsower</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">News & Calendar</a>
-                    <ul>
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">Mailing List</a></li>
-                        <li><a href="#">Events Calendar</a></li>
-                        <li><a href="#">Environmental Notice Bulletin</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">About Us</a>
-                    <ul>
-                        <li><a href="#">Organization Members</a></li>
-                        <li><a href="#">Board Meetings</a></li>
-                        <li><a href="#">Partners</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Contact Us</a></li>
-                <li>
-                    <a href="#">Emergency Response</a>
-                    <ul>
-                        <li><a href="#">Flood Reporting</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+        <div class="logo">
+            <img src="logo.png" alt="BCCD Logo">
+        </div>
     </header>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li>
+                <a href="#">Grants ▼</a>
+                <div class="dropdown-menu">
+                    <a href="#">State Grants</a>
+                    <a href="#">Work Grants</a>
+                    <a href="#">Local Funding and Support</a>
+                    <a href="#">Funding Updates</a>
+                    <a href="#">Funding Accomplishments</a>
+                </div>
+            </li>
+            <li>
+                <a href="#">Get Involved ▼</a>
+                <div class="dropdown-menu">
+                    <a href="#">Volunteer</a>
+                    <a href="#">Donate</a>
+                    <li>
+                        <a href="#">Events ▼</a>
+                        <ul class="nested-dropdown-menu">
+                            <li><a href="#">Community Resilience Symposiums</a></li>
+                            <li><a href="#">Annual Community Resilience Forum</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Education ▼</a>
+                        <ul class="nested-dropdown-menu">
+                            <li><a href="#">Workshops</a></li>
+                        </ul>
+                    </li>
+                    <a href="#">Environmental Notice Bulletin</a>
+                </div>
+            </li>
+            <li>
+                <a href="#">Resources ▼</a>
+                <div class="dropdown-menu">
+                    <a href="#">Water</a>
+                    <a href="#">Agriculture</a>
+                    <a href="#">Land</a>
+                    <a href="#">Conservation</a>
+                    <a href="#">Technology</a>
+                </div>
+            </li>
+            <li>
+                <a href="#">News & Events ▼</a>
+                <div class="dropdown-menu">
+                    <a href="#">News</a>
+                    <a href="#">Mailing List</a>
+                    <a href="#">Events Calendar</a>
+                    <a href="#">Environmental Notice Bulletin</a>
+                </div>
+            </li>
+            <li>
+                <a href="#">About Us ▼</a>
+                <div class="dropdown-menu">
+                    <a href="#">Organization Members</a>
+                    <a href="#">Board Meetings</a>
+                    <a href="#">Partners</a>
+                </div>
+            </li>
+            <li>
+                <a href="#">Contact Us</a>
+            </li>
+            <li>
+                <a href="#">Emergency Response ▼</a>
+                <div class="dropdown-menu">
+                    <a href="#">Flood Reporting</a>
+                </div>
+            </li>
+        </ul>
+    </nav>
+    <main>
+        <section class="hero">
+            <h1>Welcome to Bennington County Conservation District</h1>
+            <p>Our mission is to foster a resilient and sustainable future for the people of Bennington County by uniting community collaboration, conservation mindfulness, and technological innovation. We are dedicated to preserving the natural landscapes, supporting rural landowners, and empowering the county’s residents to take part in shaping a vibrant and environmentally forward community.</p>
+        </section>
+    </main>
 </body>
 </html>
